Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-11920

Spill to HDFS/Ozone can't address by service name

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 4.2.0
    • Impala 4.3.0
    • Backend
    • None

    Description

      HDFS and Ozone HA deployments often use a service name, such as ofs://ozone1/.... The current scratch_dirs token parsing for requires a hostname:port, which doesn't support HA addressing. We should make the parsing smarter.

      Attachments

        Activity

          People

            MikaelSmith Michael Smith
            MikaelSmith Michael Smith
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: